# Test-memes

./: README.md  docker-compose.dev.yml  nginx.conf
services/media/: .env.template  Dockerfile  README.md  pyproject.toml
services/media/src/media/: __init__.py
services/media/src/media/infrastructure/: __init__.py
services/media/src/media/infrastructure/facade/: __init__.py  s3.py
services/media/src/media/infrastructure/periphery/: __init__.py  envs.py
services/media/src/media/model/: __init__.py
services/media/src/media/model/data/: __init__.py  values.py
services/media/src/media/model/services/: __init__.py  get_image.py  put_image.py  remove_image.py  setup.py
services/media/src/media/presentation/: __init__.py
services/media/src/media/presentation/api/: __init__.py  __main__.py  apps.py  routes.py
services/media/src/media/presentation/scripts/: __init__.py  setup.py
services/memes/: .env.template  Dockerfile  README.md  alembic.ini  pyproject.toml
services/memes/src/memes/: __init__.py
services/memes/src/memes/application/: __init__.py
services/memes/src/memes/application/cases/: __init__.py  add_meme.py  delete_meme.py  read_meme.py  read_memes.py  update_meme.py
services/memes/src/memes/application/ports/: __init__.py  loggers.py  repos.py  transactions.py
services/memes/src/memes/domain/: __init__.py  entities.py  vos.py
services/memes/src/memes/facade/: __init__.py
services/memes/src/memes/periphery/: __init__.py  envs.py  loggers.py
services/memes/src/memes/presentation/: __init__.py
(+41 files in other folders)
